# amplifier-ux-analyzer

./: .gitignore  LICENSE  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt  setup-ux-analyzer.sh  test_browser_utils.py  test_code_generator.py  test_recipe.py  test_spec_converter.py  test_spec_parser.py  test_structure.py  ux-analyzer.py
amplifier_ux_analyzer/: __init__.py
amplifier_ux_analyzer/cli/: __init__.py  compare.py  main.py
amplifier_ux_analyzer/core/: __init__.py  analyzer.py  comparison.py  elements.py
amplifier_ux_analyzer/generators/: __init__.py  code_generator.py  spec_converter.py  spec_parser.py
amplifier_ux_analyzer/recipes/: README.md  __init__.py  roundtrip.yaml  simple-generate.yaml
amplifier_ux_analyzer/utils/: __init__.py  colors.py  html_utils.py
